2009-01-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (do-symbols*): Wrap body in TAGBODY.

2009-01-09  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (swank-compile-string): Don't use the
	no-longer-existing directory argument.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move the tree widget for compiler notes to contrib/.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-string): Pass the
	buffer-file-name to Lisp, not only the directory.
	Update callers accordingly.
	* slime.el ([test] arglist): Update arglist.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-popup-restore-data): Renamed from
	slime-popup-buffer-restore-info.
	(slime-popup-buffer-saved-fingerprint)
	(slime-popup-buffer-saved-emacs-snapshot)
	(slime-popup-buffer-snapshot-unchanged-p)
	(slime-popup-buffer-restore-snapshot)
	(slime-xref-quit, slime-xref-retract): Deleted.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	Remove some customization variables of questionale use.

	* slime.el (slime-when-complete-filename-expand)
	(slime-space-information-p, slime-display-compilation-output)
	(sldb-show-location-recenter-arg, slime-recenter-window)
	(slime-display-buffer-region): Deleted.

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	Just use find-tag-marker-ring as stack for M-.

	* slime.el (slime-push-definition-stack)
	(slime-pop-find-definition-stack): Do whatever Emacs's standard
	find-tag commands do.

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	Fix the slime-next-location command.

	* slime.el (slime-xref-last-buffer): New variable.
	(slime-show-xrefs): Initialize it.
	(slime-goto-next-xref): Use it.
	(slime-search-property): New function.
	(slime-xref-buffer): Delted

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*sldb-pprint-dispatch-table*): Honor *print-escape*

2009-01-07  Helmut Eller  <heller@common-lisp.net>
